# blurhash-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: decode-bench-lut.cpp  decode-bench.cpp  encode-bench.cpp  static-decode-bench.cpp
include/: blur-common.h  blur-decode.h  blur-encode.h  blurhash-cxx.hpp  fast-decode.hpp
tests/: common-tests.cpp  decode-test.cpp  encode-current-test.cpp  encode-test.cpp
